--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-primary {
+    @apply bg-green-600 md:hover:bg-green-500 text-white w-1/2 min-w-fit flex flex-row justify-center items-center p-1 shadow-md mb-2;
+  }
+  .input-primary {
+    @apply border-solid border border-slate-400 w-64 px-2 py-1 mb-6;
+  }
+}
